--- a/dive-harder-II/index.html
+++ b/dive-harder-II/index.html
@@ -15,6 +15,10 @@
 
     <div class="mainContainer">
 
+        <div id="cookieBtn" class="buttonMain" onclick="">
+            <i class="fa-solid fa-cookie-bite"></i>
+        </div>
+
         <div class="mainbtnContainer">
             <div id="configBtn" class="buttonMain" onclick="switchMenu(event, 'configsContainer')">CONFIGURE
                 <i class="fa-solid fa-gears"></i>
