--- a/dive-harder-II/index.html
+++ b/dive-harder-II/index.html
@@ -8,7 +8,15 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
   <link rel="stylesheet" href="styles.css" />
 
-  <title>Helldivers II Randomizer</title>
+  <link rel="icon" href="img/favicon.png" />
+  <title>Helldivers II Dive Harder</title>
+
+  <meta name="theme-color" content="#FFE800">
+  <meta property="og:title" content="Helldivers II Dive Harder" />
+  <meta property="og:description" content="Experience the thrill of a randomized loadout with each drop. Are you ready to dive harder into freedom? Dive, strike, kill, dive, dive!" />
+  <meta property="og:image" content="https://ghrimn.github.io/dive-harder-II/img/favicon.png" />
+  <meta property="og:url" content="https://ghrimn.github.io/dive-harder-II/" />
+  <meta property="og:type" content="website" />
 </head>
 
 <body>
